[project]
name = "korean_lunar_calendar"
version = "0.3.1"
description = "Korean Lunar Calendar"
readme = "README.rst"
authors = [
    {name = "Jinil Lee", email = "usingsky@gmail.com"},
]
maintainers = [
    {name = "Jinil Lee", email = "usingsky@gmail.com"},
]
keywords=['calendar', 'korean', 'lunar']
license = {text = "MIT"}
classifiers=[
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: End Users/Desktop',
        'Topic :: Software Development :: Libraries',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 3',
]
requires-python = ">=3.5"
dependencies = []

[project.urls]
Homepage = "https://github.com/usingsky/korean_lunar_calendar_py"
Repository = "https://github.com/usingsky/korean_lunar_calendar_py"
Changelog = "https://github.com/usingsky/korean_lunar_calendar_py/releases"
Issues = "https://github.com/usingsky/korean_lunar_calendar_py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]
tox = [
    "tox-uv; python_version >= '3.9'",
]
